// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown component should render correctly 1`] = `
<div>
  <div
    class="Markdown"
  >
    children
  </div>
</div>
`;

exports[`Markdown component should render pre component correctly 1`] = `
<div>
  <pre>
    children
  </pre>
</div>
`;
